--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ remote_theme: jekyll/minima
 minima:
   social_links:
     - { platform: github, user_url: "https://github.com/LiliWuu"}
-    - { platform: x, user_url: "https://x.com/NighthawkCoding/" }
+    - { platform: x, user_url: "https://twitter.com/dumdumsheep3" }
     - { platform: youtube, user_url: "https://www.youtube.com/channel/UChzE0MFYE4HOCpVURI6vBTA" }      
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
@@ -19,9 +19,7 @@ minima:
 plugins:
 - jekyll-remote-theme
 header_pages:
-  - navigation/blog.md
+  - navigation/compsci.md
   - navigation/search.html
   - navigation/about.md
   - navigation/tags.md
-
-
